<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pay_zhifubao_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:src="@drawable/pay_zfb_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp"
            android:paddingTop="15dp"
            android:text="@string/pay_top_msg"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/pay_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="11dp"
            android:paddingTop="15dp"
            android:text="@string/pay_acount"
            android:textColor="@color/text_black"
            android:textSize="@dimen/pay_text_size" />

        <EditText
            android:id="@+id/edt_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/pay_acount_hint"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/pay_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingBottom="15dp"
            android:paddingLeft="11dp"
            android:paddingTop="15dp"
            android:text="@string/pay_nickname"
            android:textColor="@color/text_black"
            android:textSize="@dimen/pay_text_size" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/pay_nickname_hint"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/pay_text_size" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pay_warn_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:paddingTop="10dp"
            android:text="@string/pay_warn_msg"
            android:textColor="@color/text_gray"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btn_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rrect_green_bigcorner_bg"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/pay_binding"
            android:textColor="@color/text_black"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
